Fix slight layout bug.

--- a/www/css/style.mac.css
+++ b/www/css/style.mac.css
@@ -1950,6 +1950,7 @@ h1.post-title {
 
 .event-info ul {
 	list-style: none;
+	padding: 0;
 	text-align: center;
 }
 
